# gooroomie

./: .env.example  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
app/: Dockerfile  config.yml  gunicorn_config.py  main.py  pyproject.toml  settings.py
app/api/: api.py
app/api/pages/: __init__.py  index.py
app/applications/http/: main.py
app/applications/http/pages/: responses.py  router.py
app/applications/http/webrtc/: router.py  schemas.py
app/containers/: container.py
app/core/: config.py  websocket.py
app/handlers/: webcam_streamer.py
app/handlers/webrtc/: peer_connection.py  peer_connection_manager.py
app/templates/: client.js  index.html
templates/: index.html
