[tool.poetry]
name = "gooroomie"
version = "0.1.0"
description = ""
authors = ["byunjuneseok <byunjuneseok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python = "^4.7.0.68"
fastapi = "^0.92.0"
websockets = "^10.4"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
